<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".fragments.AboutUs">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:includeFontPadding="false"
        android:gravity="center"
        android:text="@string/mgm_team"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18sdp"
        android:fontFamily="@font/ubuntu_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- GIO -->
    <ImageView
        android:id="@+id/imageGio"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:src="@drawable/gio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTeam"
       />

    <TextView
        android:id="@+id/textGioRole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:text="@string/project_manager"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toEndOf="@id/imageGio"
        app:layout_constraintTop_toBottomOf="@id/textTeam"/>

    <TextView
        android:id="@+id/textGioName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:text="@string/gio_dimaculangan"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/colorTextHint"
        app:layout_constraintStart_toEndOf="@id/imageGio"
        app:layout_constraintTop_toBottomOf="@id/textGioRole"/>

    <TextView
        android:id="@+id/textGioCourse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:text="BSCS - IV"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/colorTextHint"
        android:fontFamily="@font/ubuntu_medium"
        app:layout_constraintStart_toEndOf="@id/imageGio"
        app:layout_constraintTop_toBottomOf="@id/textGioName"/>

    <View
        android:id="@+id/viewCategoryIndicator"
        android:layout_width="@dimen/_5sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:background="@drawable/background_category_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/textGioRole"
        app:layout_constraintTop_toBottomOf="@id/textTeam" />

    <!-- MARK -->
    <ImageView
        android:id="@+id/imageMark"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:src="@drawable/mark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageGio"
        />

    <TextView
        android:id="@+id/textMarkRole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:text="@string/scrum_master"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toEndOf="@id/imageGio"
        app:layout_constraintTop_toBottomOf="@id/imageGio"/>

    <TextView
        android:id="@+id/textMarkName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:text="@string/mark_barroquillo"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/colorTextHint"
        app:layout_constraintStart_toEndOf="@id/imageMark"
        app:layout_constraintTop_toBottomOf="@id/textMarkRole"/>

    <TextView
        android:id="@+id/textMarkCourse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:text="BSCS - IV"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/colorTextHint"
        android:fontFamily="@font/ubuntu_medium"
        app:layout_constraintStart_toEndOf="@id/imageMark"
        app:layout_constraintTop_toBottomOf="@id/textMarkName"/>

    <View
        android:id="@+id/viewCategoryIndicator2"
        android:layout_width="@dimen/_5sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:background="@drawable/background_category_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/textMarkRole"
        app:layout_constraintTop_toBottomOf="@id/viewCategoryIndicator" />

    <!-- MICAH -->
    <ImageView
        android:id="@+id/imageMicah"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:src="@drawable/micahpic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageMark"
        />

    <TextView
        android:id="@+id/textMicahRole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:text="Developer"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toEndOf="@id/imageMicah"
        app:layout_constraintTop_toBottomOf="@id/imageMark"/>

    <TextView
        android:id="@+id/textMicahName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:text="@string/micah_mustaham"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/colorTextHint"
        app:layout_constraintStart_toEndOf="@id/imageMicah"
        app:layout_constraintTop_toBottomOf="@id/textMicahRole"/>

    <TextView
        android:id="@+id/textMicahCourse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:text="BSCS - IV"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/colorTextHint"
        android:fontFamily="@font/ubuntu_medium"
        app:layout_constraintStart_toEndOf="@id/imageMicah"
        app:layout_constraintTop_toBottomOf="@id/textMicahName"/>

    <View
        android:id="@+id/viewCategoryIndicator3"
        android:layout_width="@dimen/_5sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:background="@drawable/background_category_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/textMarkRole"
        app:layout_constraintTop_toBottomOf="@id/viewCategoryIndicator2" />
</androidx.constraintlayout.widget.ConstraintLayout>